# agentic-playwright-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  command.sh  docker-compose.yml  mkdocs.yml  pyproject.toml
desktop/: README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.test.json
desktop/electron/: appearance.ts  backendLogging.ts  main.ts  preload.ts  prepareWxCli.mjs  windowGeometry.ts
desktop/src/: App.tsx  main.tsx  styles.css  types.ts
desktop/tests/: agentStore.test.ts  apiConnectionTestState.test.ts  appearance.test.ts  backendLogging.test.ts  commandHistory.test.ts  keyboard.test.ts  skillCatalog.test.ts  windowGeometry.test.ts
docs/: NameAfter.md  architecture.md  explore-mode-design.md  explore-mode-dev-history.md  explore-mode-dev-spec.md  explore-mode-fix-spec.md  index.md  site-catalog.md  skill-development-guide.md  system-design.md  task-feasibility-analysis.md  team-intro.md  第2周 阶段性开发汇报.md  第三周开发任务.md
docs/adr/: 003-agent-loop-design.md
domains/: bilibili.yaml  boss.yaml  gmail.yaml
skills/comment/: bilibili_comment.yaml
skills/export/: wps_writer_export.yaml
skills/others/: bilibili_login.yaml  gmail_login.yaml
skills/search/: bilibili_search.yaml
skills/send/: gmail_send.yaml  xiaohongshu_publish.yaml
src/: cli.py  config.py  config_manager.py  server.py
src/core/: agent_loop.py  auth_manager.py  browser_manager.py  dom_explorer.py  intent_parser.py  llm_client.py  llm_utils.py  login_guard.py  script_engine.py  script_generator.py  skill_router.py  task_splitter.py  token_tracker.py  user_interaction.py  vision.py
src/desktop/: __init__.py  api.py  database.py  events.py  prompts.py  sensitive_result_store.py  task_service.py
src/gui/: app.py
src/layer_1/: actions.py  (+4 more)
tests/: test_agent_loop.py  test_auth_manager.py  test_bilibili_comment_skill.py  test_bilibili_login_skill.py  test_bilibili_search_skill.py  test_browser_manager.py  test_cli.py  test_config_manager.py  test_desktop_backend.py  test_dom_explorer.py  test_github_direct.py  test_github_login_skill.py  test_gmail_login_skill.py  test_gmail_send_skill.py  test_llm_json_routing.py  test_script_engine.py  test_simple_login.py  test_skill_registry.py  test_task_splitter.py  test_wechat_client_skill.py  test_wechat_desktop_runtime.py  test_wechat_history_sensitive.py  test_wechat_send_file_skill.py  test_wps_document_polish_skill.py  test_wps_writer_export_skill.py  test_wx_cli_client.py  test_xiaohongshu_comment_skill.py  test_xiaohongshu_publish_skill.py  test_xiaohongshu_search_skill.py  test_zhihu_search_skill.py
(+85 files in other folders)
