[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-playwright-mcp"
version = "0.1.0"
description = "MCP server for agentic browser automation with Playwright — AI writes scripts, we execute them"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "zceeeeee", email = "zceeeeee@users.noreply.github.com" },
]
keywords = [
    "mcp",
    "playwright",
    "browser-automation",
    "ai-agent",
    "llm",
    "script-engine",
    "self-healing",
    "anti-detection",
    "cloakbrowser",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "playwright>=1.59.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
    "flask>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pyperclip>=1.8.2",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
stealth = [
    "cloakbrowser>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-minify-plugin>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/zceeeeee/agentic-playwright-mcp"
Documentation = "https://zceeeeee.github.io/agentic-playwright-mcp"
Repository = "https://github.com/zceeeeee/agentic-playwright-mcp"
Issues = "https://github.com/zceeeeee/agentic-playwright-mcp/issues"

[project.scripts]
agentic-playwright-mcp = "src.cli:main"
browser-agent = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 技能库脚本模板使用沙箱注入的函数（goto/click/fill 等），静态分析无法识别
"src/skill_library/**/*.py" = ["F821"]
